--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@types/react-router-dom": "^5.3.3",
+    "i18next": "^23.11.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-transition-group": "^4.4.5",
